plonedeploy.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: plone
  labels:
    app: plone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: plone
  template:
    metadata:
      labels:
        app: plone
    spec:
      containers:
      - env:
        - name: ZEO_ADDRESS
          value: zeoserver:8100
        image: plonegovbr/plonegovbr
        imagePullPolicy: Always
        name: plone
        resources: {}
        ports:
        - containerPort: 8080
          name: "app"
          protocol: TCP
status: {}
