ploneservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: plone
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: plone
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
