zeoserverservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeoserver
spec:
  ports:
  - name: "zodb"
    port: 8100
    protocol: TCP
    targetPort: 8100
  selector:
    app: plone-zeoserver
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
