portal-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy‑connect‑timeout: 30
    nginx.ingress.kubernetes.io/proxy‑read‑timeout: 1800
    nginx.ingress.kubernetes.io/proxy‑send‑timeout: 1800
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
  name: portal-ingress
spec:
  rules:
  - host: portal.local (URL DO PORTAL)
    http:
      paths:
      - backend:
          serviceName: plone
          servicePort: 8080
status:
  loadBalancer: {}
